Update: added new button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Buttons</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
-    
+    <button class="first-button">Click Here!</button>
 </body>
 </html>
